# VibeCodingProjects

blood-hunt-companion/apps/api/: alembic.ini  pyproject.toml
blood-hunt-companion/apps/api/alembic/: env.py
blood-hunt-companion/apps/api/alembic/versions/: 0001_initial_gear.py  0002_gear_name_and_field_confidences.py  0003_vocabulary_corrections.py
blood-hunt-companion/apps/api/app/: __init__.py  config.py  data_loader.py  db.py  main.py
blood-hunt-companion/apps/api/app/models/: __init__.py  base.py  gear.py
blood-hunt-companion/apps/api/app/ocr/: __init__.py  anchors.py  calibration.py  debug.py  detect.py  fuzzy.py  heroes.py  parse.py  pipeline.py  preprocess.py  rarity.py  templates.py
blood-hunt-companion/apps/api/app/routers/: __init__.py  gear.py  simulation.py
blood-hunt-companion/apps/api/app/schemas/: __init__.py  arcana.py  common.py  gear.py  hero.py  roll_score.py  run.py  simulation.py  trait.py
blood-hunt-companion/apps/api/app/services/: __init__.py  damage_calc.py  roll_score.py  stat_aggregator.py
blood-hunt-companion/apps/api/tests/: conftest.py  test_alembic.py  test_anchors.py  test_detect.py  test_fuzzy.py  test_gear_model.py  test_gear_router.py  test_gear_score_router.py  test_ocr_fixtures.py  test_parse.py  test_pipeline.py  test_schemas.py  test_simulate_router.py  test_templates.py  test_translate_game_data.py
blood-hunt-companion/apps/api/tests/fixtures/raw_exports/: DT_ArcanaScrolls.sample.json  (+2 more)
blood-hunt-companion/apps/api/tests/services/: conftest.py  test_damage_calc.py  test_roll_score.py  test_stat_aggregator.py
(+23 files in other folders)
