[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blood-hunt-companion-api"
version = "0.1.0"
description = "Local backend for the Blood Hunt Companion app: OCR gear ingest, damage simulation, run analytics."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "rapidfuzz>=3.9",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "pytesseract>=0.3.10",
    "pillow>=10.3",
    "python-multipart>=0.0.9",
    "mss>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pillow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

# Third-party deps without type stubs / py.typed markers.
[[tool.mypy.overrides]]
module = ["pytesseract", "pytesseract.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
